--- a/Lessons/presentations/shared/include-after-body.html
+++ b/Lessons/presentations/shared/include-after-body.html
@@ -1,5 +1,6 @@
 <script>
   document.addEventListener("DOMContentLoaded", function () {
+    // Make all links open in a new tab
     const links = document.querySelectorAll("a[href]");
     links.forEach((link) => {
       link.setAttribute("target", "_blank");
