--- a/presentations/shared/include-after-body.html
+++ b/presentations/shared/include-after-body.html
@@ -1,9 +1,10 @@
 <script>
   document.addEventListener("DOMContentLoaded", function () {
-    // Make all links open in a new tab
+    // Make all links open in a new tab and add an indicator
     const links = document.querySelectorAll("a[href]");
     links.forEach((link) => {
       link.setAttribute("target", "_blank");
+      link.setAttribute("rel", "noopener noreferrer");
     });
   });
 </script>
